# WavFinder

./: .gitignore  pyproject.toml  wavfinder.spec
.github/workflows/: build.yml
src/wavfinder/: __main__.py  app.py  metadata.py  models.py  scanner.py  search.py
