[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wavfinder"
version = "0.1.0"
description = "WAV metadata fuzzy finder"
requires-python = ">=3.10"
dependencies = [
    "mutagen>=1.47",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[project.scripts]
wavfinder = "wavfinder.app:main"

[tool.setuptools.packages.find]
where = ["src"]
